[update] update Zeppelin repo path

--- a/templates/datalake-resources.template
+++ b/templates/datalake-resources.template
@@ -2240,7 +2240,7 @@
                                 "authentication": "S3AccessCreds"
                             },
                             "/home/ec2-user/zeppelin-0.7.2-bin-all.tgz": {
-                                "source": "http://apache.claz.org/zeppelin/zeppelin-0.7.2/zeppelin-0.7.2-bin-all.tgz",
+                                "source": "http://archive.apache.org/dist/zeppelin/zeppelin-0.7.2/zeppelin-0.7.2-bin-all.tgz",
                                 "mode": "000644",
                                 "owner": "root",
                                 "group": "root"
